xwayland regression - no OpenGL in Firefox and Chromium
With recent git-master, I don't have GL acceleration in both Chromium and Firefox. Terminal says
$ firefox [GFX1-]: Failed GL context creation for WebRender: 0 [GFX1-]: Failed to connect WebRenderBridgeChild. [GFX1-]: [OPENGL] Failed to init compositor with reason: FEATURE_FAILURE_OPENGL_CREATE_CONTEXT
In about:config and chrome:gpu, both browsers indicate that software rendering is used. This seems to be a regression in master branch. It doesn't happen with recent server-1.20-branch.